Rework interaction between client and host
